Hide unspecified data and fix card alignment

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -774,6 +774,7 @@ img {
     cursor: pointer;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 .property-card:hover {
